Changelog
=========


2.0 (unreleased)
----------------

- Implement select2 jquery plugin.
  [mathias.leimgruber]

- Use new vocabulary to collect all notifyable users.
  [philipp.gross]


1.2 (2012-10-16)
----------------

- Added preselect functionality.
  [mathias.leimgruber]

- Sort users and groups on notification form alphabetically.
  [mathias.leimgruber]


1.1.1 (2012-08-13)
------------------

- Show email instead of user_id on notification_form.
  [tschanzt]


1.1 (2012-03-05)
----------------

- Changed HTML in notification form.
  [Julian Infanger]

- Add checkbox in header to select all recipients.
  [Julian Infanger]


1.1c5 (2011-01-25)
------------------

- Show groups only if they have View permission
  [mathias.leimgruber]


1.1c4 (2010-12-22)
------------------

- Make notification form available (URL)
  [mathias.leimgruber]

- Do not show contact objects for notification (makes no sense).
  Set membersonly = True for assignable_users vocab.
  [mathias.leimgruber]


1.1c3 (2010-11-30)
------------------

- implemented CC notification
  [mathias.leimgruber]


1.1c2 (2010-10-26)
------------------

- Fixed the translations, used i18ndude

- Select all recipients.
  [vba, jone]

- Error when no recipients selected.
  [vba]

- Sort recipients list.
  [jin]